# btre-app

./: .gitignore  Makefile  README.md  docker-compose.yml  fabfile.py  pyproject.toml  requirements.txt  setup.cfg
accounts/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20200511_2032.py
btre/: celery.py  settings.py  urls.py
btre/static/css/: admin.css
btre/static/js/: main.js
fabric_templates/: celery  celery.service  celeryd  celeryd.service  gunicorn.service  gunicorn.socket  nginx.conf
listings/: admin.py  choices.py  models.py  urls.py  views.py
listings/migrations/: 0001_initial.py  0002_auto_20200506_1710.py  0003_listing_realtors.py  0004_auto_20200507_1733.py
pages/: urls.py  views.py
realtors/: admin.py  models.py
realtors/migrations/: 0001_initial.py  0002_auto_20200506_1736.py  0003_auto_20200506_1748.py  0004_auto_20200507_1701.py
templates/: base.html
templates/accounts/: dashboard.html  login.html  register.html
templates/admin/: base_site.html
templates/listings/: listing.html  listings.html  search.html
templates/pages/: about.html  index.html
templates/partial/: _alerts.html  _from_errors.html  _navbar.html
