[tool.poetry]
name = "btre-app"
version = "0.1.0"
description = "Django app for real estate service."
authors = ["alpden550 <alpden550@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
wemake-python-styleguide = "^0.14.0"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
