[tool.poetry]
name = "btre-app"
version = "0.1.0"
description = "Django app for real estate service."
authors = ["alpden550 <alpden550@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"
environs = "^7.4.0"
psycopg2 = "^2.8.5"
Pillow = "^7.1.2"
django-debug-toolbar = "^2.2"
Celery = "^4.4.2"
redis = "^3.5.1"
fabric = "^2.5.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
wemake-python-styleguide = "^0.14.0"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
